--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,23 +18,27 @@
                 <label for="password">Password</label>
                 <input type="password" class="form-control" name="password">
               </div>
-              <button type="submit" class="btn btn-dark">Login</button>
+              <button type="submit" class="btn btn-dark btn-social btn-google">Login</button>
             </form>
 
           </div>
         </div>
       </div>
 
-      <!-- <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign In with Google
-          </a>
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
+              <i class="fab fa-google"></i>
+              Sign In with Google
+            </a>
+            <a class="btn btn-block btn-social btn-twitter" href="/auth/twitter" role="button">
+              <i class="fab fa-twitter"></i>
+              Sign Up with Twitter
+            </a>
+          </div>
         </div>
       </div>
-    </div> -->
 
     </div>
   </div>
